fixed spacing and added content

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -459,3 +459,6 @@ a.thumbnail
 
 p:last-child
   margin-bottom: 0
+
+.bot-space
+  margin-bottom: $section-padding / 2
